# pdf-logo-web

./: app.py  pyproject.toml  requirements.txt
templates/: index.html  index.html
