[tool.poetry]
name = "pdf-logo-web"
version = "0.1.0"
description = "A FastAPI project for PDF logo processing"
authors = ["Your Name <youremail@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95"
uvicorn = "^0.20"
pymupdf = "^1.21"
pillow = "^9.0"
python-multipart = "^0.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
pdf-logo-web = "app:main"  # Вказуємо точку входу для вашого проекту

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"